# backup-ui

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.restore.yml  docker-compose.yml  pyproject.toml  requirements.txt
backup_ui/: app.py  backup_runner.py  commands.py  db_browser.py  discovery.py  profiles.py  restore_runner.py  retention.py  server_status.py  settings.py  state.py  storage.py
backup_ui/static/: style.css
backup_ui/templates/: backups.html  base.html  dashboard.html  database_detail.html  databases.html  discovery.html  files.html  job.html  plan_form.html  plans.html  processes.html  profile.html  restore.html  retention.html  server.html
deploy/: deploy.sh  rollback.sh
docs/: DEPLOY_DOCKER_RU.md  INSTALL_RU.md  OPERATIONS_RU.md  ROADMAP_RU.md  SECURITY_RU.md
systemd/: backup-ui.service
